--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,12 +8,13 @@ html, body {
     font-family: 'Montserrat',sans-serif;
 }
 body{
-    background-color:wheat ;
+    /* background-color:rosybrown ; */
+    background-color:#FAF7BF; 
 }
 h1{
     text-align: center;
 }
-h3{
+p{
     margin: 0px;
 }
 #nav_container{
@@ -23,22 +24,149 @@ h3{
     justify-content: space-between;
     padding-bottom: 29px;
     
+    
 }
+#sort_filter{
+    display: flex;
+    justify-content: space-between;
+    width: 35%;
+    padding: 10px;
+    background-color: rgb(151,189,98);
+    font-size: 1.2em;
+}
+#s_f_div1 label,#s_f_div2 label{
+    padding-right: 10px;
+}
+#s_f_div1 select,#s_f_div2 select{
+    font-size: .9em;
+}
+
 #add_employee_div{
     display: flex;
+    justify-content: space-between;
+    width: 15%;
+    padding: 10px;
+    background-color: rgb(151,189,98);
+    font-size: 1.2em;
 }
-table{
+#add_employee_div button{
+    
+}
+#main_table{
     width: 90%;
     margin: 0 auto;
 }
 th,td{
-    background-color: antiquewhite;
+    background-color:rgb(151,189,98);
+    opacity: .8;
     border: 1px solid whitesmoke;
-    padding:15px;
+    padding:10px;
     box-sizing: border-box;
 }
 .icons{
     display: flex;
     justify-content: space-between;
     font-size: 1.3em;
+}
+
+/* CSS for modal_box */
+
+
+/* body{
+    background-color:rosybrown ;
+} */
+
+#modal_box_add,#modal_box_view,#modal_box_delete{
+    display: none;
+    /* border: 2px solid red; */
+    margin: 0 auto;
+    position: absolute; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+#modal_box_view{
+    padding-bottom: 50px,div;
+}
+#modal_table{
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color:lightgoldenrodyellow ;
+}
+#add_cross,#view_cross{
+    font-size: .8em;
+    font-weight: 600;
+    position: absolute;
+    right: 131px;
+    top: 99px;
+    cursor: pointer;
+}
+#caption{
+    font-size: 2em;
+    font-weight: 800;
+    color: darkolivegreen;
+    letter-spacing: 1.5px;
+}
+#caption td{
+    text-align: center;
+}
+.col_1{
+    background-color:darkolivegreen;
+    padding: 10px;
+    width: 40%;
+
+}
+.col_2{
+    width: 60%;
+}
+input[type="text"],input[type="email"],input[type="date"]{
+    padding: 10px;
+    width: 96%;
+    border: none;
+}
+#submit_btn_div{
+    text-align: center; 
+    padding: 11px 11px 11px 11px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    
+}
+#submit_btn_div button{
+    background-color:darkolivegreen;
+    color: whitesmoke;
+    border: none;
+    padding: 10px;
+}
+
+#delete_msg_div{
+    background-color:whitesmoke ;
+    width: 38%;
+    margin: 0 auto;
+    padding: 10px 10px 26px 20px;
+}
+#delete_msg_div p{
+    padding-top: 20px;
+    padding-bottom: 26px;
+}
+#delete_msg_div button{
+    font-size: 1em;
+    padding: 5px 31px;
+}
+#yes{
+    margin-right: 70px;
+}
+#delete_cross{
+    font-size: 1.5em;
+    font-weight: 600;
+    position: absolute;
+    right: 400px;
+    top: 107px;
+    cursor: pointer;
 }
