--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,12 +8,15 @@ html, body {
     font-family: 'Montserrat',sans-serif;
 }
 body{
-    /* background-color:rosybrown ; */
-    background-color:#FAF7BF; 
+    background-color:#D4EAC8 ;
 }
 h1{
     text-align: center;
+    padding-bottom: 31px;
+    color: #357266;
+    font-size: 3rem;
 }
+/* Style for navigation container */
 p{
     margin: 0px;
 }
@@ -22,17 +25,17 @@ p{
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    padding-bottom: 29px;
-    
-    
+    padding-bottom: 50px;
 }
 #sort_filter{
+    background-color: #3A606E;
     display: flex;
     justify-content: space-between;
     width: 35%;
-    padding: 10px;
-    background-color: rgb(151,189,98);
+    padding: 22px 18px ;
+    border-radius: 8px;
     font-size: 1.2em;
+    color:whitesmoke ;
 }
 #s_f_div1 label,#s_f_div2 label{
     padding-right: 10px;
@@ -40,26 +43,41 @@ p{
 #s_f_div1 select,#s_f_div2 select{
     font-size: .9em;
 }
-
 #add_employee_div{
+    background-color: #3A606E;
     display: flex;
     justify-content: space-between;
     width: 15%;
-    padding: 10px;
-    background-color: rgb(151,189,98);
+    padding: 16px;
+    border-radius: 8px;
+    font-size: 1.2em;
+    color:whitesmoke ;
     font-size: 1.2em;
 }
-#add_employee_div button{
-    
+#add_employee_div p{
+    padding-top: 6px;
 }
+#add_employee_div button{
+    border-radius: 5px;
+    padding: 6px 15px;
+    background-color: #e3bf20;
+}
+/* Style for initail table view */
 #main_table{
     width: 90%;
     margin: 0 auto;
 }
-th,td{
-    background-color:rgb(151,189,98);
-    opacity: .8;
+th{
+    background-color:#357266;
+    color: white;
     border: 1px solid whitesmoke;
+    padding:18px;
+    box-sizing: border-box;
+    font-size: 1.2rem;
+}
+td{
+    background-color:rgb(151,189,98);
+    opacity: .9;
     padding:10px;
     box-sizing: border-box;
 }
@@ -69,71 +87,69 @@ th,td{
     font-size: 1.3em;
 }
 
-/* CSS for modal_box */
-
-
-/* body{
-    background-color:rosybrown ;
-} */
-
+/* Styles common for all the modal boxes */
 #modal_box_add,#modal_box_view,#modal_box_delete{
     display: none;
-    /* border: 2px solid red; */
     margin: 0 auto;
     position: absolute; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
-    left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.4); 
 }
 #modal_box_view{
-    padding-bottom: 50px,div;
+    padding-bottom: 50px;
 }
 #modal_table{
     width: 80%;
     margin: 0 auto;
-    padding: 20px;
-    background-color:lightgoldenrodyellow ;
+    padding: 10px;
+    background-color:#D4EAC8 ;
+    position: relative;
 }
 #add_cross,#view_cross{
+    position :absolute;
     font-size: .8em;
     font-weight: 600;
-    position: absolute;
-    right: 131px;
-    top: 99px;
-    cursor: pointer;
+    top:-30px;
+    right: 0px;
 }
 #caption{
     font-size: 2em;
     font-weight: 800;
-    color: darkolivegreen;
     letter-spacing: 1.5px;
 }
 #caption td{
     text-align: center;
+    background-color: #214E34;
+    color: white;
+    padding: 15px;
+    opacity: .9;
 }
 .col_1{
     background-color:darkolivegreen;
-    padding: 10px;
+    opacity: .8;
+    font-weight: 600;
+    padding: 14px 0px 14px 24px;
     width: 40%;
-
+    padding-left: 24px;
 }
 .col_2{
     width: 60%;
+    padding: 0px;
 }
 input[type="text"],input[type="email"],input[type="date"]{
-    padding: 10px;
-    width: 96%;
+    width: 98%;
     border: none;
+    padding: 13px 0px 16px 15px;
+    font-size: 16px;
 }
 #submit_btn_div{
     text-align: center; 
-    padding: 11px 11px 11px 11px;
+    padding: 11px;
     font-size: 18px;
     letter-spacing: 1px;
     
@@ -145,28 +161,46 @@ input[type="text"],input[type="email"],input[type="date"]{
     padding: 10px;
 }
 
+/* Style for Modal box for delete Confirmation */
+
+#modal_box_delete{
+    padding-top: 160px;
+    background-color: rgba(0,0,0,0.72); 
+    /* transform: translateY(10%); */
+}
 #delete_msg_div{
-    background-color:whitesmoke ;
+    background-color:#e3bf20;  
     width: 38%;
     margin: 0 auto;
-    padding: 10px 10px 26px 20px;
-}
-#delete_msg_div p{
-    padding-top: 20px;
-    padding-bottom: 26px;
-}
-#delete_msg_div button{
-    font-size: 1em;
-    padding: 5px 31px;
-}
-#yes{
-    margin-right: 70px;
+    padding: 10px 10px 40px 20px;
+    position: relative;
+    border-radius: 5px;  
 }
 #delete_cross{
     font-size: 1.5em;
     font-weight: 600;
     position: absolute;
-    right: 400px;
-    top: 107px;
-    cursor: pointer;
+    top: 8px;
+    right: 15px;
+}
+#delete_msg_div p{
+    padding: 20px 0px 50px 0px;
+    font-size: 1.4rem;  
+}
+#delete_msg_div button{
+    font-size: 1em;
+    padding: 5px 31px;
+    border-radius: 5px;
+}
+#yes{
+    margin-right: 70px;
+}
+#yes:hover{
+    margin-right: 70px;
+    background-color: #0f8d43;
+    color: white;
+}
+#no:hover{
+    background-color: #0f8d43;
+    color: white;
 }
