--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,7 @@ p{
     display: flex;
     justify-content: space-between;
     width: 35%;
-    padding: 22px 18px ;
+    padding: 18px 18px ;
     border-radius: 8px;
     font-size: 1.2em;
     color:whitesmoke ;
@@ -44,23 +44,24 @@ p{
     font-size: .9em;
 }
 #add_employee_div{
-    background-color: #3A606E;
-    display: flex;
+    /* background-color: #3A606E; */
     justify-content: space-between;
-    width: 15%;
-    padding: 16px;
+    width: 10%;
+    padding: 9px 9px 0px 9px;
     border-radius: 8px;
     font-size: 1.2em;
     color:whitesmoke ;
     font-size: 1.2em;
+    margin: 14px 0px 4px 0px;
 }
-#add_employee_div p{
-    padding-top: 6px;
-}
+
+
 #add_employee_div button{
     border-radius: 5px;
-    padding: 6px 15px;
     background-color: #e3bf20;
+    width: 100%;
+    letter-spacing: 1px;
+    padding: 7px 5px 7px 5px;
 }
 /* Style for initail table view */
 #main_table{
@@ -149,9 +150,13 @@ input[type="text"],input[type="email"],input[type="date"]{
 }
 #submit_btn_div{
     text-align: center; 
-    padding: 11px;
+    padding: 11px 11px 16px 11px;
     font-size: 18px;
     letter-spacing: 1px;
+    background-color: #D4EAC8;
+    margin: 0 auto;
+    width: 78.4%;
+    margin-bottom: 75px;
     
 }
 #submit_btn_div button{
