--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,7 +28,8 @@ p{
     padding-bottom: 50px;
 }
 #sort_filter{
-    background-color: #3A606E;
+    /* background-color: #3A606E; */
+    background-color: #357266;
     display: flex;
     justify-content: space-between;
     width: 39%;
@@ -71,7 +72,8 @@ p{
 
 #add_employee_div button{
     border-radius: 5px;
-    background-color: #e3bf20;
+    background-color: #357266;
+    color: white;
     width: 100%;
     letter-spacing: 1px;
     padding: 9px 5px 9px 5px;
@@ -207,7 +209,7 @@ input[type="text"],input[type="email"],input[type="date"]{
     
 }
 #submit_btn_div button,#edit_btn_div button{
-    background-color:darkolivegreen;
+    background-color: #214E34;
     color: whitesmoke;
     border: none;
     padding: 10px;
