--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,6 +127,9 @@ td{
     padding: 5px 0px 5px 15px;
     outline: none;
 }
+#skills{
+    margin-top:10px
+}
 #skills_new{
     display: block;
 }
@@ -213,6 +216,9 @@ input[type="text"],input[type="email"],input[type="date"]{
     color: whitesmoke;
     border: none;
     padding: 10px;
+}
+.span_data{
+    border: 1px solid black;
 }
 
 /* Style for Modal box for delete Confirmation */
