--- a/CSS/style.css
+++ b/CSS/style.css
@@ -128,7 +128,8 @@ td{
     outline: none;
 }
 #skills{
-    margin-top:10px
+    margin-top:10px;
+    padding-left:13px;
 }
 #skills_new{
     display: block;
