--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,7 +21,7 @@ p{
     margin: 0px;
 }
 #nav_container{
-    width: 90%;
+    width: 85%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -32,7 +32,7 @@ p{
     background-color: #357266;
     display: flex;
     justify-content: space-between;
-    width: 39%;
+    width: 45%;
     padding: 18px 18px ;
     border-radius: 8px;
     font-size: 1.2em;
@@ -79,10 +79,14 @@ p{
     padding: 9px 5px 9px 5px;
     font-size: 18px;
 }
+
+button:hover,i:hover{
+    cursor: pointer;
+}
 /* Style for initail table view */
 
 #main_table{
-    width: 90%;
+    width: 85%;
     margin: 0 auto;
 }
 
@@ -103,10 +107,17 @@ td{
     padding:10px;
     box-sizing: border-box;
 }
+/* tr+td{
+    text-align: right;
+} */
 .allSkillBtnStyle{
     border-radius: 4px;
     padding: 2px 6px;
     margin-right: 3px;
+    
+}
+.allSkillBtnStyle:hover{
+    cursor:default;
 }
 .skill_button{
     margin-top: 11px;
@@ -152,7 +163,7 @@ td{
     overflow: scroll;
 }
 #modal_table{
-    width: 80%;
+    width: 65%;
     margin: 0 auto;
     padding: 10px;
     background-color:#D4EAC8 ;
@@ -208,7 +219,7 @@ input[type="text"],input[type="email"],input[type="date"]{
     letter-spacing: 1px;
     background-color: #D4EAC8;
     margin: 0 auto;
-    width: 78.4%;
+    width: 63.3%;
     margin-bottom: 75px;
     
 }
